# DocuMente

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  status.md
docs/: ARCHIVOS_AUDITORIA.md  ARQUITECTURA.md  BRAND_GUIDELINES.md  E2E_TEST_SCENARIO.md  GUIA_DOCUMENTE.md  HANDOFF_VIDAL.md  MIGRATION_TO_EC2.md  MODEL_TIERING.md  MRM_REQUIREMENTS.md  PROPHET_AGENDA_MA.md  PROPHET_FASE0_AUDIT.md  TEMPLATE_DESIGN_SESSION.md  TEMPLATE_MODEL_DEV.md  TEMPLATE_PLACEHOLDERS_GUIDE.md  UX_PRINCIPLES.md  technical_architecture_for_data_architect.md
docs/Migracion EC2/: CHANGELOG_TECNICO_VIDAL.md
docs/Modulo Prophet MA/: Ficha_Tecnica_Modelo_Rentabilidad.docx  Guia_Llenado_Registro.md  Registro Modelos_envioAlberto.xlsx  Registro_Modelos_Template.xlsx
frontend/: .env.local.example  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/e2e/: README.md  apendices.spec.ts  crear-y-exportar.spec.ts  editar-seccion.spec.ts  gobernanza.spec.ts  helpers.ts  importar.spec.ts  llm-fallback.spec.ts  versiones.spec.ts
scripts/: build_template.py
src/: config.py
src/api/: __init__.py  auth.py  deps.py  errors.py  main.py
src/core/: template_catalog.py  template_catalog_prophet.py
src/docs/: reader.py  tabla_reader.py
src/llm/: __init__.py  client.py  pricing.py  vision_describer.py
src/storage/: db.py  repositories.py  storage.py
src/ui/: theme.py
tests/: conftest.py
tests/integration/: test_adjuntar_pdf_formula.py  test_adjuntar_tabla.py  test_api_smoke.py  test_cambiar_estado.py  test_entrevista_flow.py  test_exportar_documento.py  test_import_end_to_end.py  test_omitir_seccion.py  test_versionado.py
tests/unit/: test_anchor_reader.py  test_aplicar_brief.py  test_archivar_documento.py  test_auth_gate.py  test_back_button.py  test_capitulos_nyl.py  test_continue_hero.py  test_crear_documento.py  test_detectar_modelos_prophet.py  test_document_polisher.py  (+35 more)
(+177 files in other folders)
